# api/swagger.json
@@ -11,7 +11,9 @@
     "/users/": {
       "post": {
         "summary": "Create a new user",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Endpoint to create a new user in the system.",
         "requestBody": {
           "content": {
@@ -36,7 +38,11 @@
                   },
                   "role": {
                     "type": "string",
-                    "enum": ["user", "admin", "dev"]
+                    "enum": [
+                      "user",
+                      "admin",
+                      "dev"
+                    ]
                   },
                   "password": {
                     "type": "string",
@@ -44,7 +50,13 @@
                     "maxLength": 100
                   }
                 },
-                "required": ["name", "username", "email", "role", "password"]
+                "required": [
+                  "name",
+                  "username",
+                  "email",
+                  "role",
+                  "password"
+                ]
               }
             }
           },
@@ -62,7 +74,9 @@
                       "type": "string"
                     }
                   },
-                  "required": ["userId"],
+                  "required": [
+                    "userId"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -72,7 +86,9 @@
       },
       "get": {
         "summary": "Get all users",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Endpoint to get all users in the system.",
         "parameters": [
           {
@@ -94,7 +110,11 @@
           {
             "schema": {
               "type": "string",
-              "enum": ["user", "admin", "dev"]
+              "enum": [
+                "user",
+                "admin",
+                "dev"
+              ]
             },
             "in": "query",
             "name": "role",
@@ -145,7 +165,11 @@
                           },
                           "role": {
                             "type": "string",
-                            "enum": ["user", "admin", "dev"]
+                            "enum": [
+                              "user",
+                              "admin",
+                              "dev"
+                            ]
                           },
                           "active": {
                             "type": "boolean"
@@ -171,7 +195,12 @@
                       "type": "number"
                     }
                   },
-                  "required": ["docs", "total", "page", "limit"],
+                  "required": [
+                    "docs",
+                    "total",
+                    "page",
+                    "limit"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -183,7 +212,9 @@
     "/users/{id}": {
       "put": {
         "summary": "Update an existing user",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Endpoint to update an existing user in the system.",
         "requestBody": {
           "content": {
@@ -203,7 +234,11 @@
                   },
                   "role": {
                     "type": "string",
-                    "enum": ["user", "admin", "dev"]
+                    "enum": [
+                      "user",
+                      "admin",
+                      "dev"
+                    ]
                   },
                   "active": {
                     "type": "boolean"
@@ -258,10 +293,20 @@
                     },
                     "role": {
                       "type": "string",
-                      "enum": ["user", "admin", "dev"]
+                      "enum": [
+                        "user",
+                        "admin",
+                        "dev"
+                      ]
                     }
                   },
-                  "required": ["id", "name", "username", "email", "role"],
+                  "required": [
+                    "id",
+                    "name",
+                    "username",
+                    "email",
+                    "role"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -271,7 +316,9 @@
       },
       "get": {
         "summary": "Get a user",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Endpoint to get a user in the system.",
         "parameters": [
           {
@@ -313,10 +360,20 @@
                     },
                     "role": {
                       "type": "string",
-                      "enum": ["user", "admin", "dev"]
+                      "enum": [
+                        "user",
+                        "admin",
+                        "dev"
+                      ]
                     }
                   },
-                  "required": ["id", "name", "username", "email", "role"],
+                  "required": [
+                    "id",
+                    "name",
+                    "username",
+                    "email",
+                    "role"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -326,7 +383,9 @@
       },
       "delete": {
         "summary": "Delete a user",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Endpoint to delete a user in the system.",
         "parameters": [
           {
@@ -348,7 +407,9 @@
     "/auth/login": {
       "post": {
         "summary": "User login",
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "description": "Endpoint for user authentication and token generation.",
         "requestBody": {
           "content": {
@@ -367,7 +428,10 @@
                     "maxLength": 100
                   }
                 },
-                "required": ["username", "password"]
+                "required": [
+                  "username",
+                  "password"
+                ]
               }
             }
           },
@@ -385,7 +449,9 @@
                       "type": "string"
                     }
                   },
-                  "required": ["token"],
+                  "required": [
+                    "token"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -397,7 +463,9 @@
     "/auth/me": {
       "get": {
         "summary": "Get current user",
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "description": "Endpoint to get the current authenticated user's information.",
         "responses": {
           "200": {
@@ -425,7 +493,13 @@
                       "type": "string"
                     }
                   },
-                  "required": ["id", "name", "username", "email", "role"],
+                  "required": [
+                    "id",
+                    "name",
+                    "username",
+                    "email",
+                    "role"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -437,7 +511,9 @@
     "/gateways/": {
       "post": {
         "summary": "Create a new gateway",
-        "tags": ["Gateways"],
+        "tags": [
+          "Gateways"
+        ],
         "description": "Endpoint to create a new gateway in the system.",
         "requestBody": {
           "content": {
@@ -451,7 +527,9 @@
                     "maxLength": 100
                   }
                 },
-                "required": ["name"]
+                "required": [
+                  "name"
+                ]
               }
             }
           },
@@ -505,7 +583,9 @@
       },
       "get": {
         "summary": "Find all gateways",
-        "tags": ["Gateways"],
+        "tags": [
+          "Gateways"
+        ],
         "description": "Endpoint to find all gateways in the system.",
         "parameters": [
           {
@@ -522,7 +602,7 @@
             },
             "in": "query",
             "name": "active",
-            "required": false
+            "required": true
           },
           {
             "schema": {
@@ -566,7 +646,11 @@
                             "type": "boolean"
                           }
                         },
-                        "required": ["id", "name", "active"],
+                        "required": [
+                          "id",
+                          "name",
+                          "active"
+                        ],
                         "additionalProperties": false
                       }
                     },
@@ -580,7 +664,12 @@
                       "type": "number"
                     }
                   },
-                  "required": ["docs", "total", "page", "limit"],
+                  "required": [
+                    "docs",
+                    "total",
+                    "page",
+                    "limit"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -592,7 +681,9 @@
     "/gateways/{gatewayId}": {
       "put": {
         "summary": "Update an existing gateway",
-        "tags": ["Gateways"],
+        "tags": [
+          "Gateways"
+        ],
         "description": "Endpoint to update an existing gateway in the system.",
         "requestBody": {
           "content": {
@@ -673,7 +764,9 @@
       },
       "delete": {
         "summary": "Delete an existing gateway",
-        "tags": ["Gateways"],
+        "tags": [
+          "Gateways"
+        ],
         "description": "Endpoint to delete an existing gateway in the system.",
         "parameters": [
           {
@@ -704,7 +797,9 @@
       },
       "get": {
         "summary": "Find a gateway by id",
-        "tags": ["Gateways"],
+        "tags": [
+          "Gateways"
+        ],
         "description": "Endpoint to find a gateway by id in the system.",
         "parameters": [
           {
@@ -768,7 +863,9 @@
     "/routings/": {
       "post": {
         "summary": "Create a new routing",
-        "tags": ["Routings"],
+        "tags": [
+          "Routings"
+        ],
         "description": "Endpoint to create a new routing in the system.",
         "requestBody": {
           "content": {
@@ -879,7 +976,9 @@
       },
       "get": {
         "summary": "Find all routings",
-        "tags": ["Routings"],
+        "tags": [
+          "Routings"
+        ],
         "description": "Endpoint to find all routings in the system.",
         "parameters": [
           {
@@ -962,7 +1061,10 @@
                                 "type": "string"
                               }
                             },
-                            "required": ["id", "name"],
+                            "required": [
+                              "id",
+                              "name"
+                            ],
                             "additionalProperties": false
                           },
                           "deletedAt": {
@@ -974,7 +1076,9 @@
                               {
                                 "type": "string",
                                 "nullable": true,
-                                "enum": [null]
+                                "enum": [
+                                  null
+                                ]
                               }
                             ]
                           }
@@ -1000,7 +1104,12 @@
                       "type": "number"
                     }
                   },
-                  "required": ["docs", "total", "page", "limit"],
+                  "required": [
+                    "docs",
+                    "total",
+                    "page",
+                    "limit"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -1012,7 +1121,9 @@
     "/routings/{routingId}": {
       "put": {
         "summary": "Update an existing routing",
-        "tags": ["Routings"],
+        "tags": [
+          "Routings"
+        ],
         "description": "Endpoint to update an existing routing in the system.",
         "requestBody": {
           "content": {
@@ -1114,7 +1225,9 @@
       },
       "delete": {
         "summary": "Delete an existing routing",
-        "tags": ["Routings"],
+        "tags": [
+          "Routings"
+        ],
         "description": "Endpoint to delete an existing routing in the system.",
         "parameters": [
           {
@@ -1143,7 +1256,9 @@
       },
       "get": {
         "summary": "Find a routing by id",
-        "tags": ["Routings"],
+        "tags": [
+          "Routings"
+        ],
         "description": "Endpoint to find a routing by id in the system.",
         "parameters": [
           {
@@ -1245,7 +1360,9 @@
     "/routings/{routingSlug}/execute": {
       "post": {
         "summary": "Create a new routing execution",
-        "tags": ["Routing Executions"],
+        "tags": [
+          "Routing Executions"
+        ],
         "description": "Endpoint to create a new routing execution in the system.",
         "requestBody": {
           "content": {
@@ -1295,7 +1412,12 @@
                       "format": "date-time"
                     }
                   },
-                  "required": ["id", "routingId", "status", "createdAt"],
+                  "required": [
+                    "id",
+                    "routingId",
+                    "status",
+                    "createdAt"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -1307,7 +1429,9 @@
     "/routings/search-executions": {
       "get": {
         "summary": "Search routing executions",
-        "tags": ["Routing Executions"],
+        "tags": [
+          "Routing Executions"
+        ],
         "description": "Endpoint to search routing executions in the system.",
         "parameters": [
           {
@@ -1387,7 +1511,12 @@
                       "type": "number"
                     }
                   },
-                  "required": ["items", "total", "page", "perPage"],
+                  "required": [
+                    "items",
+                    "total",
+                    "page",
+                    "perPage"
+                  ],
                   "additionalProperties": false
                 }
               }
@@ -1399,7 +1528,9 @@
     "/config/del-prefix-cache/{prefix}": {
       "delete": {
         "summary": "Delete all keys by prefix",
-        "tags": ["Config"],
+        "tags": [
+          "Config"
+        ],
         "description": "Endpoint to delete all keys by prefix in the system.",
         "parameters": [
           {
